# poker_engine

./: CMakeLists.txt  build.ps1  cap_equity.cp313-win_amd64.pyd  poker_eval.cp313-win_amd64.pyd  pyproject.toml  setup.py  setup_equity.py  test_constraints.py  test_generic.py  test_hand_combos.py  test_holdem.py  test_ranges.py  tree.txt  tree2.txt
actions/: action.py  action_type.py
betting/: betting_rules.py
board/: board_enumerator.py  board_generator.py  board_regions.py  canonical_board_generator.py
build_tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cap_engine_tests-b12d07c_include.cmake  cap_engine_tests-b12d07c_tests.cmake  cap_engine_tests.slnx  cap_engine_tests.vcxproj  cap_engine_tests.vcxproj.filters  cmake_install.cmake
build_tests/cap_engine_tests.dir/Release/: cap_engine_tests.exe.recipe
build_tests/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
cards/: board_aware_hole_generator.py  canonical_hole_generator.py  card.py  card_utils.py  deck.py  mask.py  suit_iso.py
constraints/: base.py  builtin.py  engine.py  generator.py  types.py
cpp/: poker_eval.cp313-win_amd64.pyd  setup.py
cpp/bindings/: card_bindings.cpp  equity_wrapper.cpp  poker_eval_bindings.cpp
cpp/cards/: card_utils.cpp  card_utils.h
cpp/equity/: equity_bindings.cpp  equity_calc.cpp  equity_calc.h
cpp/evaluator/: card_utils.hpp  comb_tables.hpp  eval5.cpp  eval5.hpp  evaluate_draw.cpp  evaluate_high.cpp  evaluate_holdem.cpp  evaluate_low.cpp  evaluate_low.h  evaluate_low_unqual.h  evaluate_make5.cpp  evaluate_omaha.cpp  evaluator.cpp  evaluator.h  five_card_rank.hpp  score_types.hpp  stub_evaluators.cpp
cpp/evaluator_old/: card.hpp  evaluate_badugi.h  evaluate_high.h  evaluate_low_27_eval.h  evaluate_low_qual.h  evaluator.h
cpp/poker_eval/: __init__.py  _poker_eval.cp313-win_amd64.pyd
display/: board_display.py
game_old/: state.py
games/: bomba.yaml  double_board_plo_bomb_pot.yaml  five_points_high_low_high_low_hand.yaml  holdem.yaml  hopscotch_bomb_pot.yaml  loader.py  omaha.yaml  pandemic.yaml  plo8.yaml  three_points_high_high_hand.yaml
logging/: engine_callbacks.py
poker_eval/: __init__.py
ranges/: canonical_range.py  hand_range.py  range_builder.py  range_sampler.py
rules/: game_definition.py  game_rules.py  point_definition.py
scoring/: mock_scoring_engine.py  score_result.py  scoring_engine.py
showdown/: point_result.py  showdown_resolver.py  showdown_result.py
state/: game_state.py  hand_snapshot.py  player_state.py  poker_state.py
(+15 files in other folders)
